--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -339,7 +339,7 @@
                 JotForm.paymentExtrasOnTheFly([null,{"name":"heading","qid":"1","text":"Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},{"description":"","name":"email","qid":"3","subLabel":"example@example.com","text":"Email","type":"control_email"},null,{"description":"","name":"pickles","qid":"5","subLabel":"","text":"Pickles","type":"control_textbox"},{"description":"","name":"socks","qid":"6","subLabel":"","text":"Socks","type":"control_textbox"},{"description":"","name":"name","qid":"7","subLabel":"","text":"Name","type":"control_textbox"}]);}, 20); 
                 </script>
                 <form class="jotform-form" action="https://submit.jotform.com/submit/230913550105041" method="post" name="form_230913550105041" id="230913550105041" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID" value="230913550105041" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
-                    <div class="form-row form-group">
+                    <div class="form-row form-group" style="margin-bottom: 16px">
                       <div class="col form-group left">
                         <input type="text" id="input_6" name="q6_socks" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_6" readonly="" required="" />
                       </div>
@@ -347,21 +347,21 @@
                         <input type="text" id="input_5" name="q5_pickles" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_5" readonly="" required="" />
                       </div>
                     </div>
-                    <div id="cid_7"> 
+                    <div id="cid_7" style="margin-bottom: 16px;"> 
                       <input type="text" id="input_7" name="q7_name" data-type="input-textbox" class="form-control validate[required]" data-defaultvalue="" size="" placeholder="Name" value="" data-component="textbox" aria-labelledby="label_7" required="" />
                       <div class="invalid-feedback">Add Full Name.</div>
                     </div>
-                    <div id="cid_3">
+                    <div id="cid_3" style="margin-bottom: 16px;">
                       <input type="email" id="input_3" name="q3_email" data-type="input-textbox" class="form-control validate[required, Email]" data-defaultvalue="" size="" value="" placeholder="Email" data-component="email" aria-labelledby="label_3 sublabel_input_3" required="" />
                       <div class="invalid-feedback">Add Email Address.</div>
                     </div>
                     <div id="cid_2" class="form-input-wide" data-layout="full" style="background: #ffd200; border-radius: 6px!important; overflow: hidden; margin-top: 16px!important;">
-                        <button id="input_2" type="submit" class="btn btn-primary btn-block jsTest-submitField" data-component="button" data-content="" style="color: black!important; border-radius: 6px!important; line-height: 12px!important;">Submit</button>
-                    </div>
-                </form>
+                        <button id="input_2" type="submit" class="btn btn-secondary btn-block jsTest-submitField" data-component="button" data-content="" style="color: black!important; border-radius: 6px!important; line-height: 12px!important;">Submit</button>
+                    </div> 
+                </form>   
                 <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
                   <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
-                </blockquote>            
+                </blockquote>        
 
           </div>
         </div>
