--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -341,10 +341,10 @@
                 <form class="jotform-form" action="https://submit.jotform.com/submit/230913550105041" method="post" name="form_230913550105041" id="230913550105041" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID" value="230913550105041" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
                     <div class="form-row form-group" style="margin-bottom: 16px">
                       <div class="col form-group left">
-                        <input type="text" id="input_6" name="q6_socks" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_6" readonly="" required="" />
+                        <input type="text" id="input_6" name="q6_socks" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_6" readonly="" required="" style="cursor: default" />
                       </div>
                       <div class="col form-group right">
-                        <input type="text" id="input_5" name="q5_pickles" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_5" readonly="" required="" />
+                        <input type="text" id="input_5" name="q5_pickles" data-type="input-textbox" class="form-readonly form-control validate[required]" data-defaultvalue="" size="" value="" tabindex="-1" data-component="textbox" aria-labelledby="label_5" readonly="" required="" style="cursor: default" />
                       </div>
                     </div>
                     <div id="cid_7" style="margin-bottom: 16px;"> 
