Fixing Social Shares

--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -194,44 +194,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota</th>
-                          <td>4125</td>
+                          <th scope="row">1. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Derrick</th>
-                          <td>1583</td>
+                          <th scope="row">2. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. InjuneJoe420</th>
-                          <td>794</td>
+                          <th scope="row">3. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Eamonn</th>
-                          <td>422</td>
+                          <th scope="row">4. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Matt</th>
-                          <td>339</td>
+                          <th scope="row">5. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Oregon Delights</th>
-                          <td>58</td>
+                          <th scope="row">6. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Cheyene</th>
-                          <td>53</td>
+                          <th scope="row">7. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Rui</th>
-                          <td>42</td>
+                          <th scope="row">8. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Theo</th>
-                          <td>42</td>
+                          <th scope="row">9. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Osa Maas</th>
-                          <td>38</td>
+                          <th scope="row">10. --</th>
+                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
@@ -249,44 +249,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota</th>
-                          <td>2375</td>
+                          <th scope="row">1. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Derrick</th>
-                          <td>939</td>
+                          <th scope="row">2. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. InjuneJoe420</th>
-                          <td>259</td>
+                          <th scope="row">3. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Eamonn</th>
-                          <td>255</td>
+                          <th scope="row">4. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Matt</th>
-                          <td>183</td>
+                          <th scope="row">5. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Oregon Delights</th>
-                          <td>32</td>
+                          <th scope="row">6. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Cheyene</th>
-                          <td>31</td>
+                          <th scope="row">7. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Michela</th>
-                          <td>14</td>
+                          <th scope="row">8. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Taya</th>
-                          <td>14</td>
+                          <th scope="row">9. --</th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Ari</th>
-                          <td>13</td>
+                          <th scope="row">10. --</th>
+                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
