--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%;">
                 <ul class="list-unstyled">
                     <li class="social-share instagram">
-                        <a href="https://www.instagram.com/cannaco.usa/" target="_blank" style="text-decoration: none;">
+                        <a href="https://www.instagram.com/cannaco.world/" target="_blank" style="text-decoration: none;">
                             <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
                                 Follow on Instagram <i class="fab fa-instagram" style="margin-left: 8px;"></i>
                             </button>
