--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                     <li class="social-share facebook" style="margin-bottom: 16px;">
                         <a href="https://www.linkedin.com/company/cannaco-labs/" target="_blank" style="text-decoration: none;">
                             <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
-                                Follow on Linkedin <i class="fab fa-facebook-f" style="margin-left: 8px;"></i>
+                                Follow on Linkedin <i class="fab fa-linkedin" style="margin-left: 8px;"></i>
                             </button>
                         </a>
                     </li>
                 </ul>
                 <a href="sock-drop-game.html" style="text-decoration: none;">
-                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
+                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 24px;">PLAY NOW</button>
                 </a>
             </blockquote>
 
@@ -235,7 +235,7 @@
                 <!-- <div class="body-medium color-background">We use cookies <span class="btn-link body" aria-pressed="true" data-toggle="modal" data-target="#privacy_policy_modal" style="color:#145a3c!important;">Learn More 🍪</span></div> -->
                 <nav class="align-items-center justify-content-between">
                     <ul class="list list-unstyled left">
-                      <li><p class="body opacity" style="color: black; text-decoration: none;">Copyright © 2022 Cannaco Labs LLC. <br> All Rights Reserved.</p></li>
+                      <li><p class="body opacity" style="color: black; text-decoration: none;">Copyright © 2023 Cannaco Labs LLC. <br> All Rights Reserved.</p></li>
                     </ul>
                     <ul class="list list-unstyled list-inline right" style="margin-top: 12px;">
                       <li class="list-inline-item"><a class="body opacity one" style="color: black; cursor: pointer;" data-toggle="modal" data-target="#privacy_policy_modal">Privacy Policy</a></li>
