--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -185,6 +185,7 @@
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: #000;">Score Updated Every 24 Hours</p>
                     <table class="table">
                       <thead>
                         <tr>
@@ -240,6 +241,7 @@
                 <div class="tab-pane" id="pills_full_two" role="tabpanel" aria-labelledby="pills-full-two-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top Score Wins FREE Pickle Pipe</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: #000;">Score Updated Every 24 Hours</p>
                     <table class="table">
                       <thead>
                         <tr>
