--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -122,7 +122,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-bottom: 16px!important;">Scores Submitted!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-bottom: 0px!important;">Scores Submitted!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Thank you for playing and please share with your friends 💚</h1> -->
             </div>
 
@@ -153,7 +153,7 @@
                     </ul>
                     <li>
                         <a href="sock-drop-game.html" style="text-decoration: none;">
-                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">Restart Game</button>
+                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">Play Again</button>
                         </a>
                     </li>
                     <li>
