--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -123,6 +123,7 @@
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
               <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-bottom: 0px!important;">Scores Submitted!</h1>
+              <p class="body sub-section-heading" style="margin-bottom: 12px; color: green; font-weight: 400;">Score Update Every 24 Hours</p>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Thank you for playing and please share with your friends 💚</h1> -->
             </div>
 
@@ -153,7 +154,7 @@
                     </ul>
                     <li>
                         <a href="sock-drop-game.html" style="text-decoration: none;">
-                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">Play Again</button>
+                            <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 16px;">Play Again</button>
                         </a>
                     </li>
                     <li>
