--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -185,7 +185,7 @@
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
-                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: green; font-weight: 400;">Score Update Every 24 Hours</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: green; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
                         <tr>
