--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -184,8 +184,8 @@
               <div class="tab-content" id="pills_tabFullContent">
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
-                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: green; font-weight: 400;">Scores update every 24 hours</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 8px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
                         <tr>
@@ -240,8 +240,8 @@
                 </div>
                 <div class="tab-pane" id="pills_full_two" role="tabpanel" aria-labelledby="pills-full-two-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #ffd200;">Top Score Wins FREE Pickle Pipe</p>
-                    <p class="body sub-section-heading" style="margin-bottom: 12px; color: green; font-weight: 400;">Score Update Every 24 Hours</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 8px; color: #ffd200;">Top Score Wins FREE Pickle Pipe</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 16px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
                         <tr>
