--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -185,7 +185,7 @@
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
-                    <p class="body sub-section-heading" style="margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
+                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
                         <tr>
@@ -241,7 +241,7 @@
                 <div class="tab-pane" id="pills_full_two" role="tabpanel" aria-labelledby="pills-full-two-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top Score Wins FREE Pickle Pipe</p>
-                    <p class="body sub-section-heading" style="margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
+                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
                         <tr>
