--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -123,7 +123,7 @@
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
               <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-bottom: 0px!important;">Scores Submitted!</h1>
-              <p class="body sub-section-heading" style="margin-bottom: 16px; text-align: center; color: green; font-weight: 600;">Scores update every 24 hours</p>
+              <!-- <p class="body sub-section-heading" style="margin-bottom: 20px; text-align: center; color: green; font-weight: 600;">Scores update every 24 hours</p> -->
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Thank you for playing and please share with your friends 💚</h1> -->
             </div>
 
