--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
                         </a>
                     </li>
                 </ul>
-                <a href="sock-drop-game.html" style="text-decoration: none;">
+                <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
-                </a>
+                </a> -->
             </blockquote>
 
 
 
-            <!-- <p id="demo" style="width: 100%;
+            <p id="demo" style="width: 100%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -201,7 +201,7 @@
 
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("April 10, 2022 00:00:00").getTime();
+            var countDownDate = new Date("April 10, 2023 00:00:00").getTime();
             
             // Update the count down every 1 second
             var x = setInterval(function() {
@@ -228,7 +228,7 @@
                 document.getElementById("demo").innerHTML = "EXPIRED";
               }
             }, 1000);
-            </script> -->
+            </script>
 
 
             <blockquote style="width: 100%; text-align: center; padding: 24px 0px 0px 0px!important;">
