--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="CANNACO">
   <meta property="og:description" content="WIN Your FREE Socks!">
   <meta property="og:image" content="assets/imagery/social-share.png">
-  <meta property="og:url" content="https://www.cannaco.us/sock-drop">
+  <meta property="og:url" content="https://www.cannaco-shop.com">
   <meta name="twitter:card" content="summary_large_image">
 
 
