--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <!-- Title -->
-  <title>Cannaco</title>
+  <title>Cannaco Sock Drop</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -19,20 +19,20 @@
   <link rel="mask-icon" href="https://www.cannaco.us/assets/favicon/safari-pinned-tab.svg" color="#F9B300">
   <meta name="msapplication-TileColor" content="#F9B300">
   <meta name="theme-color" content="#F9B300">
-  <meta name="description" content="WIN Your FREE Socks!">
+  <meta name="description" content="Cannaco Sock Drop!">
   
   
   <!--  Essential META Tags -->
   <meta property="og:title" content="CANNACO">
-  <meta property="og:description" content="WIN Your FREE Socks!">
-  <meta property="og:image" content="assets/imagery/social-share.png">
-  <meta property="og:url" content="https://www.cannaco-shop.com">
+  <meta property="og:description" content="Cannaco Sock Drop!">
+  <meta property="og:image" content="https://cannaco-labs.github.io/SockDrop/assets/images/social-share.png">
+  <meta property="og:url" content="https://cannaco-labs.github.io/SockDrop/">
   <meta name="twitter:card" content="summary_large_image">
 
 
   <!--  Non-Essential, But Recommended -->
   <meta property="og:site_name" content="CANNACO">
-  <meta name="twitter:image:alt" content="WIN Your FREE Socks!">
+  <meta name="twitter:image:alt" content="Cannaco Sock Drop!">
   
   
   <!--  MailChimp Redirect -->
